Fix trip plan not showing up in edit view

--- a/static/css/trip-form.css
+++ b/static/css/trip-form.css
@@ -91,6 +91,7 @@ textarea {
   resize: vertical;
   width: 100%;
   height: 200px;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width: 800px) {
